--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,38 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&family=Rubik+Bubbles&family=Rubik+Moonrocks&display=swap");
 
+* {
+  padding: 0;
+  margin: 0;
+}
+:root {
+  --box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+  --text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+}
 body {
-  font-family: "Raleway", sans-serif;
-  background: white;
-  /* background-image: linear-gradient(#a984d1, #ddaee3); */
-  background-attachment: fixed;
+  font-family: "Rubik Moonrocks", cursive;
+  color: rgb(255, 255, 255);
+  /* background-attachment: fixed; */
   text-align: center;
-  /* background-image: url("https://preview.redd.it/rst1pkssd4f71.png?auto=webp&s=ddd41d3f86acbbe4c69b2f3f630d62208e67a3ea"); */
-  /* background-image: url("./assets/images/370969.jpg"); */
-  /* background-image: url("https://images.unsplash.com/photo-1519046904884-53103b34b206?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"); */
-  /* background-image: url("https://images.unsplash.com/photo-1516815231560-8f41ec531527?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2067&q=80"); */
-  /* background-image: url("https://images.unsplash.com/photo-1586902197503-e71026292412?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2072&q=80"); */
-  background-image: url("https://images.unsplash.com/photo-1499561385668-5ebdb06a79bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80");
-  background-size: cover;
+
+  /* background-image: url("https://images.unsplash.com/photo-1484821582734-6c6c9f99a672?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2833&q=80"); */
+  /* background-image: url("https://images.unsplash.com/photo-1624053009043-c8b9447eadc7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"); */
+
+  text-shadow: var(--text-shadow);
 }
 
-/* .main-page {
-  
-} */
+.container {
+  background-image: url("./assets/images/cover-photo.png");
+  background: white;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
 h1 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 #title {
@@ -33,6 +46,7 @@ h1 {
   font-size: 2rem;
 }
 .circles {
+  padding: 2rem;
   display: flex;
   flex-flow: row wrap;
   margin: 0 auto;
@@ -48,8 +62,10 @@ h1 {
   border-radius: 50%;
   cursor: pointer;
   display: flex;
+  flex-direction: row wrap;
   align-items: center;
   justify-content: center;
+  box-shadow: var(--box-shadow);
 }
 
 .circle.active {
@@ -69,6 +85,7 @@ button {
   border-radius: 5px;
   margin: 1rem;
   cursor: pointer;
+  box-shadow: var(--box-shadow);
 }
 
 button:hover {
