--- a/src/index.css
+++ b/src/index.css
@@ -10,29 +10,54 @@
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 
   --text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+  --background-shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
 }
 body {
   font-family: "Rubik Moonrocks", cursive;
   color: rgb(255, 255, 255);
   /* background-attachment: fixed; */
   text-align: center;
-
-  /* background-image: url("https://images.unsplash.com/photo-1484821582734-6c6c9f99a672?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2833&q=80"); */
-  /* background-image: url("https://images.unsplash.com/photo-1624053009043-c8b9447eadc7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"); */
-
   text-shadow: var(--text-shadow);
 }
 
 .container {
-  background-image: url("./assets/images/cover-photo.png");
   background: white;
   background-size: cover;
+  background-position: 0 10%;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+footer {
+  color: rgb(255, 255, 255);
+  font-family: "Raleway";
+  text-shadow: none;
+  text-align: end;
 }
 
 h1 {
   font-size: 3rem;
+}
+
+.buttons-container {
+  background: linear-gradient(145deg, #e2e8ec, #ffffff);
+  box-shadow: var(--background-shadow);
+  border-radius: 15px;
+  padding: 2rem;
+}
+
+#author {
+  font-size: 2rem;
+  align-items: flex-start;
+}
+
+#speed-game {
+  padding: 0rem 0rem 1rem;
 }
 
 #title {
@@ -42,6 +67,7 @@ h1 {
 .gamearea > h2 {
   color: #ffffff;
 }
+
 #score {
   font-size: 2rem;
 }
@@ -58,7 +84,6 @@ h1 {
 .circle {
   height: 150px;
   width: 150px;
-  /* background-color: #f5cdff; */
   border-radius: 50%;
   cursor: pointer;
   display: flex;
@@ -71,7 +96,6 @@ h1 {
 .circle.active {
   background-color: #fff225;
   background: url("./assets/images/Shiba.png");
-  /* background: url("https://as2.ftcdn.net/v2/jpg/04/34/74/41/1000_F_434744139_yqDjTwer52TYI2xDTzPeGV2PxTOWPfiD.jpg"); */
   background-position: center;
   background-size: 230px;
 }
@@ -86,6 +110,7 @@ button {
   margin: 1rem;
   cursor: pointer;
   box-shadow: var(--box-shadow);
+  width: 7rem;
 }
 
 button:hover {
