Change background pictures and add back buttons

--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,12 @@ button:hover {
   display: none;
 }
 
+.back-button {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
 .startHidden,
 .stopHidden {
   display: none;
